@@ -1,3 +1,7 @@
+Wed Sep 27 19:04:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added a regex replace node.
+
 Wed Sep 27 17:12:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Fixed bug in timeout code
